# simple_flask_crud

./: .gitignore  README.md  manage.py  pyproject.toml
app/: __init__.py  admin.py  config.py  extensions.py  models.py  schemas.py
app/resources/: __init__.py  item.py  role.py  user.py
